# ChangeLog for dev-ruby/fcgiwrap
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Sep 2008; Alex Legler <gentoo@a3li.info> +metadata.xml,
  +fcgiwrap-0.1.6.ebuild:
  Initial commit, bug #236064
