@@ -1,4 +1,4 @@
 DIST fcgiwrap-0.1.6.tgz 1682 RMD160 ec235e1d5716ee7ac661088ac7e0c075bbd51baf SHA1 ab7204ead0ca4890af8043bf043b489f8591d1a8 SHA256 5958f0986bfba351d3b5eb134499bf3acd9d0db85db09070e89cc36b342d8860
-EBUILD fcgiwrap-0.1.6.ebuild 571 RMD160 e1823257278e4de7b2e5882435d64850b2f66b16 SHA1 8213acbe6dda320333426da42b0fe6584ec52173 SHA256 958d26b773ceb9e643cc4e2e91696e827dbddaae93cb705014b0acfc5a960df4
-MISC ChangeLog 236 RMD160 a5fdbdbce14d03c475cc9f2024f0172f4cfb6d28 SHA1 cfb7a5f35219cccb7a613bb792c7ca30c53e7395 SHA256 5bfe1f3cafd3d3035a1e86192125d552117b9f7191107d1cbd7b60edbc556ccf
+EBUILD fcgiwrap-0.1.6.ebuild 550 RMD160 23a8726f5e4b2f66b28f0b08e34f653af29f72a4 SHA1 d2c623280d4f7f0c9d1adad8a102f6a70c90cd0e SHA256 e52b69f1692091d9810bdd0996b4d1e2ccbf198a4b008fb806dc670298b4d65e
+MISC ChangeLog 338 RMD160 619c653064f8b3a84dd5fcbc76b0adc8706c414f SHA1 61a5d5f6e5f4054a7df2031e92d2305fdad04040 SHA256 89621fe49789ee7c1bf20f230da6c8ebf8971d054d40446b45721d649c645117
 MISC metadata.xml 157 RMD160 5d9e2c7ecba96ffebd936d38acedf859cdea84e1 SHA1 8ce15dcc608eeb5616aeec610dc695cbe6f93e02 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c
