@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Dec 2008; Alex Legler <gentoo@a3li.info> fcgiwrap-0.1.6.ebuild:
+  Improving ebuild, thanks Hans
+
   14 Sep 2008; Alex Legler <gentoo@a3li.info> +metadata.xml,
   +fcgiwrap-0.1.6.ebuild:
   Initial commit, bug #236064
